# Android-Mem-Kit

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build.rs
.github/workflows/: build.yml
cmake/: gen_nothing_header.cmake
docs/: MIGRATION.md  RECIPES.md  USAGE.md
examples/: main.c
include/: memkit.h  memkit_jit.h
src/: il2cpp.c  il2cpp_safe.c  jit.c  jit_highlevel.c  memory.c  memory.rs  nothing_embed.h  nothing_path.c  nothing_path.h  shadowhook_override.c  xdl_wrapper.c
src/bridge/: bridge.cpp
tests/: xdl_wrapper_test.c
